[dev]Fix: Resolve overlapping pictures and char

--- a/css/design.css
+++ b/css/design.css
@@ -143,6 +143,4 @@ a:link {
     font-size: 20px;
     position: relative;
     left: 10px;
-    top: -25px;
 }
-
